// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RankingLabel /> should render correctly 1`] = `
<RankingLabelstyle__RankingLabelContainer>
  <Label>
    bonjour
  </Label>
  <p
    className="description"
  >
    ceci est la description
  </p>
  <Image
    alt=""
    height="auto"
    objectFit="cover"
    src="https://i.picsum.photos/id/257/200/200.jpg"
    width="100%"
  />
</RankingLabelstyle__RankingLabelContainer>
`;

exports[`<RankingLabel /> should render correctly without description 1`] = `
<RankingLabelstyle__RankingLabelContainer>
  <Label>
    bonjour
  </Label>
  <Image
    alt=""
    height="auto"
    objectFit="cover"
    src="https://i.picsum.photos/id/257/200/200.jpg"
    width="100%"
  />
</RankingLabelstyle__RankingLabelContainer>
`;

exports[`<RankingLabel /> should render correctly without image 1`] = `
<RankingLabelstyle__RankingLabelContainer>
  <Label>
    bonjour
  </Label>
  <p
    className="description"
  >
    ceci est la description
  </p>
</RankingLabelstyle__RankingLabelContainer>
`;
